<resources>
    <string name="app_name">ePoise Recruiter</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    //welcome screens

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="action_reset_password">Reset Password</string>
    <string name="login_back_button">Back to login</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_organization_list">OrganizationListActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Dashboard</string>
    <string name="dash_board">Dashboard</string>
    <string name="invites">Invites</string>
    <string name="hiring">Hiring</string>
    <string name="training">Training</string>
    <string name="my_organization">My organization</string>
    <string name="manage_users">Manage Users</string>
    <string name="vendor_report">Vendor Reports</string>
    <string name="evaluators_report">Evaluators Report</string>
    <string name="candidiate_report">Candidates Report</string>
    <string name="position_based_report">Positions Based Report</string>
    <string name="settings">Settings</string>
    <string name="title_activity_invite_opp_detail">InviteOppDetailActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_hiring_opp_detail">HiringOppDetailActivity</string>
    <string name="title_activity_training_opp_detail">TrainingOppDetailActivity</string>
    <string name="title_activity_hiring_candidate_response">HiringCandidateResponseActivity</string>
    <string name="title_activity_training_candidate_response">TrainingCandidateResponseActivity</string>
    <string name="title_activity_video_streaming">VideoStreamingActivity</string>
    <string name="title_activity_vendor_report_opp_list">VendorReportOpportunityDetailActivity</string>
    <string name="change_password">Change Password</string>
    <string name="title_activity_vendor_report_opportunity_detail">VendorReportOpportunityDetailActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_webview">WebviewActivity</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_change_password">Change Password</string>
    <string name="swipe_down_message">Swipe down to Refresh..</string>

</resources>
